[project]
description = "A simple ecies demo based on FastAPI"
name = "eciespy-demo"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "eciespy>=0.4.3",
  "litestar>=2.13.0",
  "msgspec>=0.18.6",
  "uvicorn>=0.32.1",
  "uvloop>=0.21.0; sys_platform != 'win32'",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.13.0",
  "ruff>=0.8.0",
]
