[project]
description = "A simple ecies demo based on Litestar"
name = "eciespy-demo"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "eciespy>=0.4.4",
  "litestar>=2.15.1",
  "msgspec>=0.19.0",
  "uvicorn>=0.34.0",
  "uvloop>=0.21.0; sys_platform != 'win32'",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.9.10",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
